# voting_similarities

./: .env.example  .env.production  .gitignore  AGENTS.md  Caddyfile  PROJECT.md  README.md  TODO-responsive.md  TODO.md  compose.yml  deploy-production.sh  deploy.sh  multi-categories-filtering.plan  pyproject.toml  requirements.txt
backend/: Dockerfile  __main__.py  alembic.ini  database_handling.md  temp
backend/app/: config.py  database.py  embedding.py  main.py  models.py  schemas.py  similarity.py
backend/app/api/: config.py  health.py  routes.py
backend/migrations/: env.py
backend/migrations/versions/: 1d9941e43959_add_description_to_questions.py  26d65773d7d2_add_person_embedding_and_group_.py  351a0dfcbb5f_add_color_to_groups.py  7e3d55803069_initial_schema.py  98847eb27900_add_per_category_to_person_person_.py  a1b2c3d4e5f6_add_category_discriminativeness.py  b2c3d4e5f6a7_add_roles_commissions_update_person.py  c3d4e5f6a7b8_add_has_passed_to_questions.py  c74e546ec80d_initial_schema.py  e41a6efd589b_add_per_category_to_person_group_.py
backend/scripts/: compute_similarities.py  ingest_real_data.py  seed.py
frontend/: Dockerfile  frontend_plan.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: app.tsx  index.tsx  theme.ts
frontend/src/api/: categories.ts  client.ts  config.ts  embeddings.ts  groups.ts  people.ts  questions.ts  types.ts  voters.ts  votes.ts
frontend/src/constants/: config.ts  fr.ts
frontend/src/pages/: categories-list-page.tsx  map-page.tsx  (+10 more)
(+46 files in other folders)
